--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root{
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	background-image: url('./cool-background.png');
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+	margin-top: 100px;
+	width: 600px;	
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.task__content{	
+display: flex;
+height: 50px;
+justify-content: space-between;
+padding: 10px;
+margin-top: 10px;
+align-items: center;
+border:2px solid rgb(189, 140, 7);
+border-radius: 15px;
+color:rgb(189, 140, 7);
 }
 
-.App-link {
-  color: #61dafb;
+.taskszero{
+	margin-top: 50px;
+	text-align: center;
+	font-size: 14px;
+	color:rgb(189, 140, 7);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ 
+.task-enter {
+	transform: translateX(-350px);
+ }
+ .task-enter-active {
+	transform: translateX(0px);
+	transition: all 500ms ease-in;
+ }
+ .task-exit {
+	opacity: 1;
+ }
+ .task-exit-active {
+	transform: translateX(-350px);
+	transition: all 500ms ease-in;
+	text-decoration: line-through;
+ }
